# nadoverse

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/nadoverse/: cli.py  mcp_server.py  registry.py
tests/: test_cli.py  test_mcp_server.py  test_registry.py
