[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nadoverse"
dynamic = ["version"]
description = "Unified installer and CLI for the *Nado bioinformatics toolkit"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Alastair Smith", email = "alastair.smith@ndcls.ox.ac.uk" }]
keywords = ["bioinformatics", "genomics", "sequencing", "meta-package"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["typer", "rich", "pandas"]

[project.optional-dependencies]
seqnado   = ["seqnado>=1.0.6"]
plotnado  = ["plotnado>=0.3.1"]
tracknado = ["tracknado>=0.3.1"]
bamnado   = ["bamnado>=0.6.1"]
quantnado = ["quantnado>=0.4.8"]
mccnado   = ["mccnado>=0.1.5"]
tabnado   = [
    "TabNado>=0.1.0; python_version < '3.13' and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
]
regulonado = [
    "regulonado @ git+https://github.com/alsmith151/ReguloNado.git ; python_version < '3.13'",
]
mcp       = ["fastmcp>=3.0"]
all       = [
    "seqnado>=1.0.6",
    "plotnado>=0.3.1",
    "tracknado>=0.3.1",
    "bamnado>=0.6.1",
    "quantnado>=0.4.8",
    "mccnado>=0.1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-subprocess>=1.5",
]
# Reserved extras — not yet published to PyPI:
# wignado       = []
# peaknado      = []
# psudobulknado = []

[project.scripts]
nado         = "nadoverse.cli:app"
nadoverse-mcp = "nadoverse.mcp_server:main"

[project.urls]
Repository = "https://github.com/alsmith151/nadoverse"

[tool.hatch.version]
path = "src/nadoverse/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nadoverse"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
environments = [
    "sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
